--- a/index.html
+++ b/index.html
@@ -998,14 +998,14 @@
                         <div class="single-footer-widget mb-60 wow fadeInUp" data-wow-delay="300ms">
                             <!-- Footer Logo -->
                             <a href="#" class="footer-logo"><img style="height: auto;width: auto;max-height: 72px;max-width: 200px;" src="img/Text-Logo.png" alt=""></a>
-                            <p>To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain.</p>
+                            <p>Hack it till you crack it!</p>
 
                             <!-- Social Info -->
                             <div class="social-info">
-                                <a href="#"><i class="zmdi zmdi-facebook"></i></a>
-                                <a href="#"><i class="zmdi zmdi-instagram"></i></a>
-                                <a href="#"><i class="zmdi zmdi-twitter"></i></a>
-                                <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+                                <a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/hackverse/"><i class="zmdi zmdi-facebook"></i></a>
+                                <a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/hackverse20/"><i class="zmdi zmdi-instagram"></i></a>
+                                <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/hackverse20/"><i class="zmdi zmdi-twitter"></i></a>
+                                <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/company/hackverse/"><i class="zmdi zmdi-linkedin"></i></a>
                             </div>
                         </div>
                     </div>
@@ -1018,20 +1018,20 @@
 
                             <!-- Contact Area -->
                             <div class="footer-contact-info">
-                                <p><i class="zmdi zmdi-map"></i> Name </p>
-                                <p><i class="zmdi zmdi-phone"></i> 0123456789 </p>
-                                <p><i class="zmdi zmdi-email"></i> name@gmail.com</p>
+                                <p><i class="zmdi zmdi-map"></i> Hackverse </p>
+                                <!-- <p><i class="zmdi zmdi-phone"></i> 0123456789 </p> -->
+                                <p><i class="zmdi zmdi-email"></i> hackverse@nitk.ed.in</p>
                             </div>
                         </div>
                     </div>
 
                     <!-- Single Footer Widget Area -->
-                    <div class="col-12 col-sm-6 col-lg-3">
+                    <!-- <div class="col-12 col-sm-6 col-lg-3">
                         <div class="single-footer-widget mb-60 wow fadeInUp" data-wow-delay="300ms">
-                            <!-- Widget Title -->
+                            
                             <h5 class="widget-title">Gallery</h5>
 
-                            <!-- Footer Gallery -->
+                            
                             <div class="footer-gallery">
                                 <div class="row">
                                     <div class="col-4">
@@ -1055,7 +1055,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
