--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
                 <!-- Heading -->
                 <div class="col-12">
                     <div class="section-heading-2 text-center wow fadeInUp" data-wow-delay="300ms">
-                        <p>Our Timetable</p>
+                        <p>Timeline</p>
                         <h4>Schedule Plan</h4>
                     </div>
                 </div>
