--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:image" content="./img/LOGO.png"/>
 
     <!-- Title -->
-    <title>Hackverse</title>
+    <title>HackVerse</title>
 
     <!-- Favicon -->
     <link rel="icon" href="./img/LOGO.png">
@@ -325,7 +325,7 @@
             <div class="col-lg-6">
                 <ul id="faq-list">
                     <li>
-                        <a data-toggle="collapse" class="collapsed" href="#faq1">1. Is this hackathon an online event or offline? <i class="fa fa-minus-circle"></i></a>
+                        <a data-toggle="collapse" class="collapsed" href="#faq1">Is this hackathon an online event or offline? <i class="fa fa-minus-circle"></i></a>
                         <div id="faq1" class="collapse" data-parent="#faq-list">
                             <p>
                                 HackVerse is an offline event and as a participant you need to be present at NITK campus.
@@ -334,7 +334,7 @@
                     </li>
 
                     <li>
-                        <a data-toggle="collapse" href="#faq2" class="collapsed">2. Is there any registration
+                        <a data-toggle="collapse" href="#faq2" class="collapsed">Is there any registration
                             fee? <i class="fa fa-minus-circle"></i></a>
                         <div id="faq2" class="collapse" data-parent="#faq-list">
                             <p>
@@ -344,25 +344,24 @@
                     </li>
 
                     <li>
-                        <a data-toggle="collapse" href="#faq3" class="collapsed">3. Will accommodation and
+                        <a data-toggle="collapse" href="#faq3" class="collapsed">Will accommodation and
                             food be provided? <i class="fa fa-minus-circle"></i></a>
                         <div id="faq3" class="collapse" data-parent="#faq-list">
                             <p>
-                               Yes. Sure. Sí. हाँ. Absolutely.You will be provided with proper meals. Thanks to our sponsors.
+                               Yes. Sure. Sí. हाँ. Absolutely. You will be provided with proper meals. Thanks to our sponsors.
                             </p>
                         </div>
                     </li>
                     <li>
-                        <a data-toggle="collapse" href="#faq4" class="collapsed">4. Are there any rules
-                            ? <i class="fa fa-minus-circle"></i></a>
+                        <a data-toggle="collapse" href="#faq4" class="collapsed">What is the selection criteria? <i class="fa fa-minus-circle"></i></a>
                         <div id="faq4" class="collapse" data-parent="#faq-list">
                             <p>
-                                There are as such no particular rules to be followed. But all the participants do need to follow a code of conduct.
+                                We are looking for people who innovate and can build crazy, unique solutions to real-world problems. Tell us why you want to be a part of HackVerse, any accomplishments you are proud of and anything else which could strengthen your application.
                             </p>
                         </div>
                     </li>
                     <li>
-                        <a data-toggle="collapse" href="#faq5" class="collapsed">5. How big can a team be? <i class="fa fa-minus-circle"></i></a>
+                        <a data-toggle="collapse" href="#faq5" class="collapsed">How big can a team be? <i class="fa fa-minus-circle"></i></a>
                         <div id="faq5" class="collapse" data-parent="#faq-list">
                             <p>
                                 You can form teams of up to 3 people. Most teams aim to have a mix of people with both design and developer skills.
@@ -371,32 +370,28 @@
                     </li>
 
                     <li>
-                        <a data-toggle="collapse" href="#faq6" class="collapsed">6. What should I do if I do not have any team yet? <i class="fa fa-minus-circle"></i></a>
+                        <a data-toggle="collapse" href="#faq6" class="collapsed">What should I do if I do not have any team yet? <i class="fa fa-minus-circle"></i></a>
                         <div id="faq6" class="collapse" data-parent="#faq-list">
                             <p>
-                                Just fill out the application form and we will match you with the best team possible during Pre-hackathon meeting(Can we do this)
+                                Just fill out the application form and we will match you with the best team possible on site. You could also join our Telegram group to find potential teammates.
                             </p>
                         </div>
                     </li>
-
-
-
                 </ul>
             </div>
 
             <div class="col-lg-6">
                 <ul id="faq2-list">
                     <li>
-                        <a data-toggle="collapse" href="#faq7" class="collapsed">7. What are the Perks of participating in this Hackathon? <i class="fa fa-minus-circle"></i></a>
+                        <a data-toggle="collapse" href="#faq7" class="collapsed">What are the perks of participating in this hackathon? <i class="fa fa-minus-circle"></i></a>
                         <div id="faq7" class="collapse" data-parent="#faq-list">
                             <p>
-                                Hackathon Provide hands on experience with the experts from different field working on the Projects like Blockchain, AI, Machine Learning, etc. This will help to give a head start if any one want to make project on the field. Along with that the participant will be provided with cool swags, stickers and refreshments to keep them up.Also our sponsors will be providing problem statements and if team works on the problem statements, they may get company prizes and recruitment benefits.
-
+                                The hackathon will provide hands on experience with the experts from different field working on the. Along with that the participant will be provided with cool swag, stickers and refreshments to keep them up. Also our sponsors will be providing problem statements and if team works on the problem statements, they may get company prizes and recruitment benefits.
                             </p>
                         </div>
                     </li>
                     <li>
-                        <a data-toggle="collapse" href="#faq8" class="collapsed">8. What should I bring? <i class="fa fa-minus-circle"></i></a>
+                        <a data-toggle="collapse" href="#faq8" class="collapsed">What should I bring? <i class="fa fa-minus-circle"></i></a>
                         <div id="faq8" class="collapse" data-parent="#faq2-list">
                             <p>
                                 Bring your student ID, laptop, chargers. A pillow and sleeping bag may be useful as well. Please leave anything illegal at home.
@@ -405,8 +400,8 @@
                     </li>
 
                     <li>
-                        <a data-toggle="collapse" href="#faq9" class="collapsed">9. I don't have a CS
-                            background. Can I still participate? <i class="fa fa-minus-circle"></i></a>
+                        <a data-toggle="collapse" href="#faq9" class="collapsed">Can I participate without a computer science
+                            background?<i class="fa fa-minus-circle"></i></a>
                         <div id="faq9" class="collapse" data-parent="#faq2-list">
                             <p>
                                 Yes. Creativity is independent of your technical skills. You can learn the tools and
@@ -416,44 +411,21 @@
                     </li>
 
                     <li>
-                        <a data-toggle="collapse" href="#faq10" class="collapsed">10. What is the criterion of selection? <i class="fa fa-minus-circle"></i></a>
+                        <a data-toggle="collapse" href="#faq10" class="collapsed">Are there any problem statements for the hackathon? <i class="fa fa-minus-circle"></i></a>
                         <div id="faq10" class="collapse" data-parent="#faq2-list">
-                            <p>
-                                You will be judged on the quality, innovation, feasibility and impact of your idea/plan of action, project implementation.
+                            <p>We believe being forced to build on problem statements limits creativity and participants should have the freedom to express their creativity. However some broad tracks are Artificial Intelligence, Blockchain, FinTech, Future Mobility, Algorithms, AR/VR.
                             </p>
                         </div>
                     </li>
 
                     <li>
-                        <a data-toggle="collapse" href="#faq11" class="collapsed">11. Can I start working on my hack before the event? <i class="fa fa-minus-circle"></i></a>
+                        <a data-toggle="collapse" href="#faq11" class="collapsed">Can I start working on my hack before the event? <i class="fa fa-minus-circle"></i></a>
                         <div id="faq11" class="collapse" data-parent="#faq2-list">
                             <p>
-                                No. In the interest of fairness, students should not be working on their projects before the hackathon begins and we do not allow participants to work on pre-existing projects. However, you can familiarize yourself with all the tools and technologies you intend to use beforehand!
-
+                                No. In the interest of fairness, students should not be working on their projects before the hackathon begins and we do not allow participants to work on pre-existing projects. However, you can familiarize yourself with all the tools and technologies you intend to use beforehand.
                             </p>
                         </div>
-                    </li>
-
-                    <!-- <li>
-                        <a data-toggle="collapse" href="#faq12" class="collapsed">12. How do we have to submit our
-                            idea? <i class="fa fa-minus-circle"></i></a>
-                        <div id="faq12" class="collapse" data-parent="#faq2-list">
-                            <p>
-                                You must submit your idea in plain text in about 200 words. In case you are
-                                selected, we would ask you for additional documentation later.
-                            </p>
-                        </div>
-                    </li> -->
-
-                    <li>
-                        <a data-toggle="collapse" href="#faq12" class="collapsed">12. I have a question related to hackathon which is not listed above. What should I do? <i class="fa fa-minus-circle"></i></a>
-                        <div id="faq12" class="collapse" data-parent="#faq2-list">
-                            <p>
-                                You can always contact us at <a href="mailto:hackverse@nitk.edu.in">hackverse@nitk.edu.in</a>
-                            </p>
-                        </div>
-                    </li>
-
+                    </li>                  
                 </ul>
             </div>
             <!-- </div> -->
@@ -713,6 +685,7 @@
                                 <a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/hackverse20/"><i class="zmdi zmdi-instagram"></i></a>
                                 <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/hackverse20/"><i class="zmdi zmdi-twitter"></i></a>
                                 <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/company/hackverse/"><i class="zmdi zmdi-linkedin"></i></a>
+                                <a target="_blank" rel="noopener noreferrer" href="https://t.me/joinchat/HAmW2Uv1on3fERQssMs2oQ"><i class="fa fa-telegram" aria-hidden="true"></i></a>                            
                             </div>
                         </div>
                     </div>
@@ -725,9 +698,8 @@
 
                             <!-- Contact Area -->
                             <div class="footer-contact-info">
-                                <p><i class="zmdi zmdi-map"></i> Hackverse </p>
-                                <!-- <p><i class="zmdi zmdi-phone"></i> 0123456789 </p> -->
-                                <p><i class="zmdi zmdi-email"></i> hackverse@nitk.ed.in</p>
+                                <p><i class="zmdi zmdi-pin"></i><a style="color:#9293bc" href="https://goo.gl/maps/86DJCMqtYdhVFNgA8" target="_blank">National Institute of Technology Karnataka, Surathkal</a></p>
+                                <p><i class="zmdi zmdi-email"></i><a style="color:#9293bc" href="mailto:hackverse@nitk.edu.in" target="_blank">hackverse@nitk.edu.in</a></p>
                             </div>
                         </div>
                     </div>
@@ -806,7 +778,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
     <script src="js/confer.bundle.js"></script>
     <!-- Active -->
     <script src="js/default-assets/active.js"></script>
-
+    <script src="https://use.fontawesome.com/940386bfc9.js"></script>
 </body>
 
 </html>
