--- a/index.html
+++ b/index.html
@@ -58,13 +58,14 @@
                                 <li class="active"><a href="">Home</a></li>
                                 <li><a href="#about">About</a></li>
                                 <li><a href="#faq">FAQ</a></li>
-                                <li><a href="">Contact</a></li>
+                                <li><a href="#">Contact</a></li>
                                 <li><a href="#">Links</a>
                                     <ul class="dropdown">
                                         <li><a target="_blank" rel="noopener noreferrer" href="http://dj.nitk.ac.in/">NITK  💎 Jubilee</a></li>
                                         <li><a target="_blank" rel="noopener noreferrer" href="http://www.nitk.ac.in/">NITK </a></li>
                                         <li><a target="_blank" rel="noopener noreferrer" href="http://ie.nitk.ac.in/">IE </a></li>
-                                        <li><a target="_blank" rel="noopener noreferrer" href="">Our Team </a></li>                                        
+                                        <!-- <li><a target="_blank" rel="noopener noreferrer" href="#">Our Team </a></li>                                         -->
+
                                         <!-- <li><a href="schedule.html">- Schedule</a></li>
                                         <li><a href="./faq/">- Tickets</a></li>
                                         <li><a href="blog.html">- Blog</a></li>
@@ -107,7 +108,7 @@
                             <div class="welcome-text text-right">
                                 <h2 data-animation="fadeInUp" data-delay="300ms">HackVerse <br>24-hour National Level Hackathon</h2>
                                 <h6 data-animation="fadeInUp" data-delay="500ms">National Institute of Technology Karnataka, Surathkal</h6>
-                                <h3 data-animation="fadeInUp" data-delay="500ms">Jan 26th - 27th</h6>
+                                <h3 data-animation="fadeInUp" data-delay="500ms">Jan 25th - 26th 2019</h6>
                                 <!-- <div class="hero-btn-group" data-animation="fadeInUp" data-delay="700ms">
                                     <a href="#" class="btn confer-btn">More Information <i class="zmdi zmdi-long-arrow-right"></i></a>
                                 </div> -->
@@ -152,7 +153,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <!-- About Content -->
-                <div class="col-12 col-md-6">
+                <div class="col-12 col-md-6 order-2 order-lg-1">
                     <div class="about-content-text mb-80">
                         <!-- <h6 class="wow fadeInUp" data-wow-delay="300ms">About</h6> -->
                         <h3 class="wow fadeInUp" data-wow-delay="300ms">What is Hackverse ?</h3>
@@ -173,7 +174,7 @@
                 </div>
 
                 <!-- About Thumb -->
-                <div class="col-6 col-md-6">
+                <div class="col-6 col-md-6 order-1 order-lg-2">
                     <div class="about-thumb mb-80 wow fadeInUp" data-wow-delay="300ms">
                         <img src="img/LOGO.png" alt="">
                     </div>
@@ -182,7 +183,7 @@
 
             <div class="row align-items-center">
                     <!-- About Content -->
-                    <div class="col-12 col-md-6">
+                    <div class="col-12 col-md-6 order-2 order-lg-1">
                         <div class="about-content-text mb-80">
                             <!-- <h6 class="wow fadeInUp" data-wow-delay="300ms">About</h6> -->
                             <h3 class="wow fadeInUp" data-wow-delay="300ms">The Institution</h3>
@@ -192,7 +193,7 @@
                     </div>
     
                     <!-- About Thumb -->
-                    <div class="col-6 col-md-6">
+                    <div class="col-6 col-md-6 order-1 order-lg-2">
                         <div class="about-thumb mb-80 wow fadeInUp" data-wow-delay="300ms">
                             <img src="img/nitk.png" alt="">
                         </div>
@@ -201,7 +202,7 @@
 
             <div class="row align-items-center">
                     <!-- About Content -->
-                    <div class="col-12 col-md-6">
+                    <div class="col-12 col-md-6 order-2 order-lg-1">
                         <div class="about-content-text mb-80">
                             <!-- <h6 class="wow fadeInUp" data-wow-delay="300ms">About</h6> -->
                             <h3 class="wow fadeInUp" data-wow-delay="300ms">The Organizers</h3>
@@ -220,7 +221,7 @@
                     </div>
     
                     <!-- About Thumb -->
-                    <div class="col-6 col-md-6">
+                    <div class="col-6 col-md-6 order-1 order-lg-2">
                         <div class="about-thumb mb-80 wow fadeInUp" data-wow-delay="300ms">
                             <img src="img/ie_logo.png" alt="IE NITK logo">
                         </div>
@@ -682,8 +683,8 @@
                             <!-- Social Info -->
                             <div class="social-info">
                                 <a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/hackverse/"><i class="zmdi zmdi-facebook"></i></a>
-                                <a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/hackverse20/"><i class="zmdi zmdi-instagram"></i></a>
-                                <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/hackverse20/"><i class="zmdi zmdi-twitter"></i></a>
+                                <a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/hackversenitk/"><i class="zmdi zmdi-instagram"></i></a>
+                                <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/hackversenitk/"><i class="zmdi zmdi-twitter"></i></a>
                                 <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/company/hackverse/"><i class="zmdi zmdi-linkedin"></i></a>
                                 <a target="_blank" rel="noopener noreferrer" href="https://t.me/joinchat/HAmW2Uv1on3fERQssMs2oQ"><i class="fa fa-telegram" aria-hidden="true"></i></a>                            
                             </div>
