added more meta tags

--- a/index.html
+++ b/index.html
@@ -6,11 +6,22 @@
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="HackVerse - 24 hour National Level Hackathon">
+    <meta name="description" content="HackVerse - 24 Hour Nation-Wide Hackathon at NITK, Surathkal as a part of the Diamond Jubilee Celebrations">
+    <meta name="keywords" content="HackVerse, Hackathon, Nation-Wide, NITK Surathkal, Diamond Jubilee Celebrations, IE NITK, Prizes">
 
-    <meta property="og:title" content="HackVerse"/>    
-    <meta property="og:description" content="24 hour National Level Hackathon" />
-    <meta property="og:image" content="./img/LOGO.png"/>
+    <meta property="og:title" content="HackVerse - One of South India's Biggest Student Hackathon"/>
+    <meta property="og:description" content="HackVerse - 24 Hour Nation-Wide Hackathon at NITK, Surathkal as a part of the Diamond Jubilee Celebrations" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/HackVerse/hackverse.github.io/master/img/LOGO.png"/>
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://hackverse.nitk.ac.in/" />
+    
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:creator" content="ienitk">
+    <meta name="twitter:site" content="https://hackverse.nitk.ac.in/">
+    <meta name="twitter:title" content="HackVerse - One of South India's Biggest Student Hackathon">
+    <meta name="twitter:description" content="HackVerse - 24 Hour Nation-Wide Hackathon at NITK, Surathkal as a part of the Diamond Jubilee Celebrations">
+    <meta name="twitter:image:src" content="./img/LOGO.png">
 
     <!-- Title -->
     <title>HackVerse</title>
@@ -20,7 +31,31 @@
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
-
+    
+    <script type="application/ld+json">
+        {
+            "@context": "https://hackverse.nitk.ac.in",
+            "@type": "Event",
+            "name": "HackVerse",
+            "email": "hackverse@nitk.edu.in"
+            "url": "https://hackverse.nitk.ac.in",
+            "description": "HackVerse - 24 Hour Nation-Wide Hackathon at NITK, Surathkal as a part of the Diamond Jubilee Celebrations",
+            "startDate": "25/01/2020 08:00AM",
+            "endDate": "26/01/2020 09:00PM",
+            "location": {
+                "@type": "Place",
+                "name": "NITK Surathkal",
+                "sameAs": "http://www.nitk.ac.in/",
+                "address": {
+                  "@type": "PostalAddress",
+                  "streetAddress": "NITK Surathkal",
+                  "addressLocality": "Surathkal",
+                  "postalCode": "575025",
+                  "addressCountry": "IND"
+                }
+            },
+        }
+    </script>
 </head>
 
 <body>
@@ -756,8 +791,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                     <div class="col-12 col-md-6">
                         <div class="footer-menu">
                             <ul class="nav">
-                                <li><a href="#"><i class="zmdi zmdi-circle"></i> Terms of Service</a></li>
-                                <li><a href="#"><i class="zmdi zmdi-circle"></i> Privacy Policy</a></li>
+                                <li><a href="#"><i class="zmdi zmdi-circle"></i> Code of Conduct</a></li>
+                                <!-- <li><a href="#"><i class="zmdi zmdi-circle"></i> Privacy Policy</a></li> -->
                             </ul>
                         </div>
                     </div>
