--- a/index.html
+++ b/index.html
@@ -135,13 +135,13 @@
     <section class="welcome-area">
         <div class="welcome-slides owl-carousel">
             <!-- Single Slide -->
-            <div class="single-welcome-slide bg-img bg-overlay jarallax" >
+            <div class="single-welcome-slide bg-img bg-overlay jarallax" style="background-image: url(img/bg-img/bg.png);">
                 <div class="container h-100">
                     <div class="row h-100 align-items-center">
                         <!-- Welcome Text -->
                         <div class="col-12">
                             <div class="welcome-text text-right">
-                                <h2 data-animation="fadeInUp" data-delay="300ms">HackVerse <br>24-hour National Level Hackathon</h2>
+                                <h2 data-animation="fadeInUp" data-delay="300ms">HackVerse <br>24-Hour Nation Wide Hackathon</h2>
                                 <h6 data-animation="fadeInUp" data-delay="500ms">National Institute of Technology Karnataka, Surathkal</h6>
                                 <!-- <h3 data-animation="fadeInUp" data-delay="500ms">Jan 25th - 26th 2019</h6> -->
                                 <!-- <div class="hero-btn-group" data-animation="fadeInUp" data-delay="700ms">
@@ -741,36 +741,36 @@
                     </div>
 
                     <!-- Single Footer Widget Area -->
-                    <!-- <div class="col-12 col-sm-6 col-lg-3">
+                    <div class="col-12 col-md-6 col-lg-3">
                         <div class="single-footer-widget mb-60 wow fadeInUp" data-wow-delay="300ms">
                             
-                            <h5 class="widget-title">Gallery</h5>
+                            <h5 class="widget-title">Campus</h5>
 
                             
                             <div class="footer-gallery">
                                 <div class="row">
                                     <div class="col-4">
-                                        <a href="img/bg-img/21.jpg" class="single-gallery-item"><img src="img/bg-img/21.jpg" alt=""></a>
+                                        <a href="img/nitk/01.jpg" class="single-gallery-item"><img src="img/nitk/01.jpg" alt=""></a>
                                     </div>
                                     <div class="col-4">
-                                        <a href="img/bg-img/22.jpg" class="single-gallery-item"><img src="img/bg-img/22.jpg" alt=""></a>
+                                        <a href="img/nitk/02.jpg" class="single-gallery-item"><img src="img/nitk/02.jpg" alt=""></a>
                                     </div>
                                     <div class="col-4">
-                                        <a href="img/bg-img/23.jpg" class="single-gallery-item"><img src="img/bg-img/23.jpg" alt=""></a>
+                                        <a href="img/nitk/03.jpg" class="single-gallery-item"><img src="img/nitk/03.jpg" alt=""></a>
                                     </div>
                                     <div class="col-4">
-                                        <a href="img/bg-img/24.jpg" class="single-gallery-item"><img src="img/bg-img/24.jpg" alt=""></a>
+                                        <a href="img/nitk/04.jpg" class="single-gallery-item"><img src="img/nitk/04.jpg" alt=""></a>
                                     </div>
                                     <div class="col-4">
-                                        <a href="img/bg-img/25.jpg" class="single-gallery-item"><img src="img/bg-img/25.jpg" alt=""></a>
+                                        <a href="img/nitk/05.jpg" class="single-gallery-item"><img src="img/nitk/05.jpg" alt=""></a>
                                     </div>
                                     <div class="col-4">
-                                        <a href="img/bg-img/26.jpg" class="single-gallery-item"><img src="img/bg-img/26.jpg" alt=""></a>
+                                        <a href="img/nitk/06.jpg" class="single-gallery-item"><img src="img/nitk/06.jpg" alt=""></a>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div> -->
+                    </div>
                 </div>
             </div>
         </div>
