--- a/index.html
+++ b/index.html
@@ -57,6 +57,16 @@
         }
     </script>
 </head>
+    
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-149404272-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-149404272-1');
+</script>
 
 <body>
 
