--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                             <div class="welcome-text text-right">
                                 <h2 data-animation="fadeInUp" data-delay="300ms">HackVerse <br>24-Hour Nation Wide Hackathon</h2>
                                 <h6 data-animation="fadeInUp" data-delay="500ms">National Institute of Technology Karnataka, Surathkal</h6>
-                                <!-- <h3 data-animation="fadeInUp" data-delay="500ms">Jan 25th - 26th 2019</h6> -->
+                                <h3 data-animation="fadeInUp" data-delay="500ms">Jan 25th - 26th 2019</h6>
                                 <!-- <div class="hero-btn-group" data-animation="fadeInUp" data-delay="700ms">
                                     <a href="#" class="btn confer-btn">More Information <i class="zmdi zmdi-long-arrow-right"></i></a>
                                 </div> -->
