--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <nav class="classy-navbar justify-content-between" id="conferNav">
 
                     <!-- Logo -->
-                    <a class="nav-brand" href="./index.html"><img style="height: auto;width: auto;max-height: 72px;max-width: 250px;" src="./img/Text-Logo.png"></a>
+                    <a class="nav-brand" href=""><img style="height: auto;width: auto;max-height: 72px;max-width: 250px;" src="./img/Text-Logo.png"></a>
 
                     <!-- Navbar Toggler -->
                     <div class="classy-navbar-toggler">
@@ -103,7 +103,7 @@
                                 <li class="active"><a href="">Home</a></li>
                                 <li><a href="#about">About</a></li>
                                 <li><a href="#faq">FAQ</a></li>
-                                <li><a href="#">Contact</a></li>
+                                <li><a href="#footer">Contact</a></li>
                                 <li><a href="#">Links</a>
                                     <ul class="dropdown">
                                         <li><a target="_blank" rel="noopener noreferrer" href="http://dj.nitk.ac.in/">NITK  💎 Jubilee</a></li>
@@ -714,7 +714,7 @@
     <!-- Contact Area End -->
 
     <!-- Footer Area Start -->
-    <footer class="footer-area bg-img bg-overlay-2 section-padding-100-0">
+    <footer id="footer" class="footer-area bg-img bg-overlay-2 section-padding-100-0">
         <div class="main-footer-area">
             <div class="container">
                 <div class="row">
@@ -798,14 +798,14 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                         </div>
                     </div>
                     <!-- Footer Menu -->
-                    <div class="col-12 col-md-6">
+                    <!-- <div class="col-12 col-md-6">
                         <div class="footer-menu">
                             <ul class="nav">
                                 <li><a href="#"><i class="zmdi zmdi-circle"></i> Code of Conduct</a></li>
-                                <!-- <li><a href="#"><i class="zmdi zmdi-circle"></i> Privacy Policy</a></li> -->
+                                <li><a href="#"><i class="zmdi zmdi-circle"></i> Privacy Policy</a></li>
                             </ul>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
