--- a/index.html
+++ b/index.html
@@ -100,10 +100,12 @@
                         <!-- Nav Start -->
                         <div class="classynav">
                             <ul id="nav">
-                                <li class="active"><a href="">Home</a></li>
+                                <!-- <li class="active"><a href="">Home</a></li> -->
                                 <li><a href="#about">About</a></li>
                                 <li><a href="#faq">FAQ</a></li>
                                 <li><a href="#footer">Contact</a></li>
+                                <li><a href="#sponsors">Sponsors</a></li>
+                                <!-- <li><a href="">Prizes</a></li> -->
                                 <li><a href="#">Links</a>
                                     <ul class="dropdown">
                                         <li><a target="_blank" rel="noopener noreferrer" href="http://dj.nitk.ac.in/">NITK  💎 Jubilee</a></li>
@@ -126,12 +128,11 @@
                                         </li> -->
                                     </ul>
                                 </li>
-                                <!-- <li><a href="">Sponsors</a></li> -->
-                                <!-- <li><a href="">Prizes</a></li> -->
                             </ul>
 
                             <!-- Get Tickets Button -->
-                            <!-- <a href="#" class="btn confer-btn mt-3 mt-lg-0 ml-3 ml-lg-5">Register <i class="zmdi zmdi-long-arrow-right"></i></a> -->
+
+                            <!-- <a href="#" class="btn confer-btn mt-3 mt-lg-0 ml-3 ml-lg-5">Register! <i class="zmdi zmdi-long-arrow-right"></i></a> -->
                         </div>
                         <!-- Nav End -->
                     </div>
@@ -154,9 +155,14 @@
                                 <h2 data-animation="fadeInUp" data-delay="300ms">HackVerse <br>24-Hour Nation Wide Hackathon</h2>
                                 <h6 data-animation="fadeInUp" data-delay="500ms">National Institute of Technology Karnataka, Surathkal</h6>
                                 <h3 data-animation="fadeInUp" data-delay="500ms" style="color: gold" >Jan 25th - 26th, 2020</h6>
-                                <!-- <div class="hero-btn-group" data-animation="fadeInUp" data-delay="700ms">
-                                    <a href="#" class="btn confer-btn">More Information <i class="zmdi zmdi-long-arrow-right"></i></a>
-                                </div> -->
+                                <div style=" margin-left: auto;margin-right: auto;width: 250px;">
+                                    <button id="devfolio-apply-now"><svg class="logo" xmlns="http://www.w3.org/2000/svg" fill="#fff"
+                                        viewBox="0 0 115.46 123.46" style="height:24px;width:24px;margin-right:8px">
+                                        <path d="M115.46 68a55.43 55.43 0 0 1-50.85 55.11S28.12 124 16 123a12.6 12.6 0 0 1-10.09-7.5 15.85 15.85 0 0 0 5.36 1.5c4 .34 10.72.51 20.13.51 13.82 0 28.84-.38 29-.38h.26a60.14 60.14 0 0 0 54.72-52.47c.05 1.05.08 2.18.08 3.34z" />
+                                        <path d="M110.93 55.87A55.43 55.43 0 0 1 60.08 111s-36.48.92-48.58-.12C5 110.29.15 104.22 0 97.52l.2-83.84C.38 7 5.26.94 11.76.41c12.11-1 48.59.12 48.59.12a55.41 55.41 0 0 1 50.58 55.34z" />
+                                        </svg>Apply with Devfolio
+                                    </button>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -556,13 +562,13 @@
 
     <!-- Our Sponsor And Client Area Start -->
 
-    <!-- <section class="our-sponsor-client-area section-padding-100">
+    <section id="sponsors" style="background-color: white" class="our-sponsor-client-area section-padding-100">
         <div class="container">
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading-2 text-center wow fadeInUp" data-wow-delay="300ms">
-                        <p>Partners &amp; Sponsors</p>
-                        <h4>OFFICIAL SPONSOR</h4>
+                        <!-- <p>Partners &amp; Sponsors</p> -->
+                        <h4 style="color:navy">OFFICIAL SPONSORS</h4>
                     </div>
                 </div>
             </div>
@@ -571,18 +577,18 @@
                 <div class="col-12">
                     <div class="our-sponsor-area d-flex flex-wrap">
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a href="#"><img src="img/core-img/p-1.png" alt=""></a>
+                            <a target="_blank" rel="noopener noreferrer" href="https://devfolio.co/"><img src="img/sponsors-img/devfolio.png" alt=""></a>
                         </div>
+                        <!-- <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a href="#"><img src="img/sponsors-img/devfolio2.png" alt=""></a>
+                        </div> -->
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a href="#"><img src="img/core-img/p-2.png" alt=""></a>
-                        </div>
-                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a href="#"><img src="img/core-img/p-3.png" alt=""></a>
+                            <a target="_blank" rel="noopener noreferrer" href="https://matic.network"><img src="img/sponsors-img/matic.png" alt=""></a>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-12">
+                <!-- <div class="col-12">
                     <div class="our-client-area mt-100 wow fadeInUp" data-wow-delay="300ms">
                         <div class="client-area owl-carousel">
                             <div class="single-client-content">
@@ -604,10 +610,10 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
-    </section> -->
+    </section>
     
     <!-- Our Sponsor And Client Area End -->
 
@@ -825,6 +831,28 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
     <!-- Active -->
     <script src="js/default-assets/active.js"></script>
     <script src="https://use.fontawesome.com/940386bfc9.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            let devfolioOptions = {
+                buttonSelector: '#devfolio-apply-now',
+                key: 'hackverse',
+            }
+
+            let script = document.createElement('script');
+            script.src = "https://apply.devfolio.co";
+            document.head.append(script);
+
+            script.onload = function () {
+                new Devfolio(devfolioOptions);
+            }
+
+            script.onerror = function () {
+                document.querySelector(devfolioOptions.buttonSelector).addEventListener('click', function () {
+                    window.location.href = 'https://devfolio.co/external-apply/' + devfolioOptions.key;
+                });
+            }
+        });
+    </script>
 </body>
 
 </html>
