--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
     <!-- Welcome Area Start -->
     <section class="welcome-area">
-        <div class="welcome-slides owl-carousel">
+        <!-- <div class="welcome-slides owl-carousel"> -->
             <!-- Single Slide -->
             <div class="single-welcome-slide bg-img bg-overlay jarallax" style="background-image: url(img/bg-img/nitk/banner2.jpg);">
                 <div class="container h-100">
@@ -192,7 +192,7 @@
                     </div>
                 </div>
             </div> --> 
-        </div>
+        <!-- </div> -->
 
         <!-- Scroll Icon -->
         <div class="icon-scroll" id="scrollDown"></div>
