--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
 
             <div class="row">
                 <div class="col-12">
-                    <div class="our-sponsor-area d-flex flex-wrap">
+                    <div style="display:flex;justify-content: center;" class="our-sponsor-area d-flex flex-wrap">
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://devfolio.co/"><img src="img/sponsors-img/devfolio.png" alt=""></a>
                         </div>
