Add sponsor message

--- a/index.html
+++ b/index.html
@@ -558,6 +558,7 @@
                             <a target="_blank" rel="noopener noreferrer" href="https://matic.network"><img src="img/sponsors-img/matic.png" alt=""></a>
                         </div>
                     </div>
+                    <p style="display:flex;justify-content: center;">Interested in sponsoring Hackverse? Shoot us an email at <a style="color:#9293bc; font-weight: normal; text-indent: 0.2em;" href="mailto:hackverse@nitk.edu.in" target="_blank">hackverse@nitk.edu.in</a></p>
                 </div>
 
                 <!-- <div class="col-12">
