Add favicon for 404

--- a/404.html
+++ b/404.html
@@ -19,6 +19,9 @@
       <!-- Style sheets -->
       <link href="css/reset.css" rel="stylesheet">
       <link href="css/main.css" rel="stylesheet">
+
+      <!-- Favicon -->
+      <link rel="icon" href="./img/LOGO.png">
    </head>
    <body>
       <div id="gamecontainer">
