--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                         <div class="about-content-text mb-80">
                             <!-- <h6 class="wow fadeInUp" data-wow-delay="300ms">About</h6> -->
                             <h3 class="wow fadeInUp" data-wow-delay="300ms">The Institution</h3>
-                            <p class="wow fadeInUp" data-wow-delay="300ms">National Institute of Technology Karnataka (NITK) is one of the premier engineering institutions of the country. Situated near Mangalore along the coast of the Arabian Sea, NITK is home to some of the brightest young minds of the country engaged in a wide array of disciplines. With a vibrant and robust student body, NITK has been the launchpad for people with great ideas that have grown to be very successful ventures including Practo, Purpule, SaveMonk among others. This year, we celebrate our Diamond Jubilee. To commemorate 60 years of NITK, we aim to gather all like minded hackers to our own institute.</p>
+                            <p class="wow fadeInUp" data-wow-delay="300ms">National Institute of Technology Karnataka (NITK) is one of the premier engineering institutions in the country. Situated near Mangalore along the coast of the Arabian Sea, NITK is home to some of the brightest young minds of the country engaged in a wide array of disciplines. With a vibrant and robust student body, NITK has been the launchpad for people with great ideas that have grown to be very successful ventures including Practo, Perpule, SaveMonk among others. This year, we celebrate our Diamond Jubilee. To commemorate 60 years of NITK, we aim to gather all like minded hackers to our own institute.</p>
                             <!-- <a href="#" class="btn confer-btn mt-50 wow fadeInUp" data-wow-delay="300ms">Interested <i class="zmdi zmdi-long-arrow-right"></i></a> -->
                         </div>
                     </div>
@@ -353,7 +353,7 @@
                         <a data-toggle="collapse" class="collapsed" href="#faq1">Is this hackathon an online event or offline? <i class="fa fa-minus-circle"></i></a>
                         <div id="faq1" class="collapse" data-parent="#faq-list">
                             <p>
-                                HackVerse is an offline event and as a participant you need to be present at NITK campus.
+                                HackVerse is an offline event and as a participant you will need to be present at NITK campus.
                             </p>
                         </div>
                     </li>
@@ -373,7 +373,7 @@
                             food be provided? <i class="fa fa-minus-circle"></i></a>
                         <div id="faq3" class="collapse" data-parent="#faq-list">
                             <p>
-                               Yes. Sure. Sí. हाँ. Absolutely. You will be provided with proper meals. Thanks to our sponsors.
+                               Yes. Sure. Sí. हाँ. Absolutely.
                             </p>
                         </div>
                     </li>
@@ -411,15 +411,15 @@
                         <a data-toggle="collapse" href="#faq7" class="collapsed">What are the perks of participating in this hackathon? <i class="fa fa-minus-circle"></i></a>
                         <div id="faq7" class="collapse" data-parent="#faq-list">
                             <p>
-                                The hackathon will provide hands on experience with projects on different fields. Participants will be provided with cool swag, stickers and refreshments to keep them up. 
+                                The hackathon will instantly increases your knowledge and skill level and will serve as a platform to socialize with the tech community. Cash prizes and other perks are in store for the winners and cool swag for all participants. 
                             </p>
                         </div>
                     </li>
                     <li>
-                        <a data-toggle="collapse" href="#faq8" class="collapsed">What should I bring? <i class="fa fa-minus-circle"></i></a>
+                        <a data-toggle="collapse" href="#faq8" class="collapsed">Once accepted, what should I bring? <i class="fa fa-minus-circle"></i></a>
                         <div id="faq8" class="collapse" data-parent="#faq2-list">
                             <p>
-                                Bring your student ID, laptop, chargers. A pillow and sleeping bag may be useful as well. Please leave anything illegal at home.
+                                Bring your student ID, laptop and chargers. A pillow and sleeping bag may be useful as well. Please leave anything illegal at home.
                             </p>
                         </div>
                     </li>
