update telegram link

--- a/index.html
+++ b/index.html
@@ -734,7 +734,7 @@
                                 <a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/hackversenitk/"><i class="zmdi zmdi-instagram"></i></a>
                                 <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/hackversenitk/"><i class="zmdi zmdi-twitter"></i></a>
                                 <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/company/hackverse/"><i class="zmdi zmdi-linkedin"></i></a>
-                                <a target="_blank" rel="noopener noreferrer" href="https://t.me/joinchat/HAmW2Uv1on3fERQssMs2oQ"><i class="fa fa-telegram" aria-hidden="true"></i></a>                            
+                                <a target="_blank" rel="noopener noreferrer" href="https://t.me/hackverse"><i class="fa fa-telegram" aria-hidden="true"></i></a>                            
                             </div>
                         </div>
                     </div>
