--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="HackVerse - 24 Hour Nation-Wide Hackathon at NITK, Surathkal as a part of the Diamond Jubilee Celebrations">
     <meta name="keywords" content="HackVerse, Hackathon, Nation-Wide, NITK Surathkal, Diamond Jubilee Celebrations, IE NITK, Prizes">
 
-    <meta property="og:title" content="HackVerse - One of South India's Biggest Student Hackathon"/>
+    <meta property="og:title" content="HackVerse - One of South India's Biggest Student Hackathons"/>
     <meta property="og:description" content="HackVerse - 24 Hour Nation-Wide Hackathon at NITK, Surathkal as a part of the Diamond Jubilee Celebrations" />
     <meta property="og:image" content="https://raw.githubusercontent.com/HackVerse/hackverse.github.io/master/img/LOGO.png"/>
     <meta property="og:type" content="website" />
@@ -24,7 +24,7 @@
     <meta name="twitter:image:src" content="./img/LOGO.png">
 
     <!-- Title -->
-    <title>HackVerse</title>
+    <title>HackVerse | January 25-26, 2020</title>
 
     <!-- Favicon -->
     <link rel="icon" href="./img/LOGO.png">
