--- a/index.html
+++ b/index.html
@@ -577,10 +577,10 @@
                         </div>
                     </div>
                     <div id="desktop">
-                        <p style="display:flex;justify-content: center;">Interested in sponsoring Hackverse? Shoot us an email at <a style="color:#9293bc; font-weight: normal; text-indent: 0.2em;" href="mailto:hackverse@nitk.edu.in" target="_blank">hackverse@nitk.edu.in</a></p>
+                        <p style="display:flex;justify-content: center;">Interested in sponsoring HackVerse? Shoot us an email at <a style="color:#9293bc; font-weight: normal; text-indent: 0.2em;" href="mailto:hackverse@nitk.edu.in" target="_blank">hackverse@nitk.edu.in</a></p>
                     </div>
                     <div id="mobile">
-                        <p style="display:flex;justify-content: center;font-size: 15px">Interested in sponsoring Hackverse?</p>
+                        <p style="display:flex;justify-content: center;font-size: 15px">Interested in sponsoring HackVerse?</p>
                         <p style="display:flex;justify-content: center;font-size: 15px">Shoot us an email at <a style="color:#9293bc; font-weight: normal; text-indent: 0.2em;" href="mailto:hackverse@nitk.edu.in" target="_blank">hackverse@nitk.edu.in</a></p>
                     </div>
                 </div>
