--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                     <ul class="dropdown">
                                         <li><a target="_blank" rel="noopener noreferrer" href="http://dj.nitk.ac.in/">NITK  💎 Jubilee</a></li>
                                         <li><a target="_blank" rel="noopener noreferrer" href="http://www.nitk.ac.in/">NITK </a></li>
-                                        <!-- <li><a target="_blank" rel="noopener noreferrer" href="http://ie.nitk.ac.in/">IE </a></li> -->
+                                        <li><a target="_blank" rel="noopener noreferrer" href="http://ie.nitk.ac.in/">IE NITK</a></li>
                                         <!-- <li><a target="_blank" rel="noopener noreferrer" href="#">Our Team </a></li>                                         -->
 
                                         <!-- <li><a href="schedule.html">- Schedule</a></li>
