--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                             We’ll provide a platform for
                             innovations, where developers can
                             test and showcase their potential to
-                            the best of their abilities.</p>
+                            the best of their abilities. The hackathon will also have keynotes & workshops from executives from the industry.</p>
                         <!-- <a href="#" class="btn confer-btn mt-50 wow fadeInUp" data-wow-delay="300ms">Interested <i class="zmdi zmdi-long-arrow-right"></i></a> -->
                     </div>
                 </div>
