Added balsamiq logo

--- a/index.html
+++ b/index.html
@@ -584,6 +584,9 @@
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://www.wolfram.com/language/"><img src="img/sponsors-img/wolfram.png" alt=""></a>
                         </div>
+                        <div class="single-sponsor wow fadeInUp" style="margin-left: 12%" data-wow-delay="300ms">
+                            <a target="_blank" rel="noopener noreferrer" href="https://balsamiq.com/"><img style="max-width: 50%;height: auto;" src="img/sponsors-img/balsamiq-logo-screen.png" alt=""></a>
+                        </div>
                     </div>
                     <div id="desktop">
                         <p style="display:flex;justify-content: center;">Interested in sponsoring HackVerse? Shoot us an email at <a style="color:#9293bc; font-weight: normal; text-indent: 0.2em;" href="mailto:hackverse@nitk.edu.in" target="_blank">hackverse@nitk.edu.in</a></p>
