Add Codechef, Gatsby, elastic logos

--- a/index.html
+++ b/index.html
@@ -573,6 +573,9 @@
                             <a target="_blank" rel="noopener noreferrer" href="https://matic.network"><img src="img/sponsors-img/matic.png" alt=""></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a target="_blank" rel="noopener noreferrer" href="https://www.codechef.com/"><img src="img/sponsors-img/codechef.png" alt=""></a>
+                        </div> 
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://www.creative-tim.com/"><img src="img/sponsors-img/tim-horizontal-logo-transparent-bg.png" alt=""></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
@@ -583,6 +586,12 @@
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://www.wolfram.com/language/"><img src="img/sponsors-img/wolfram.png" alt=""></a>
+                        </div>
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a target="_blank" rel="noopener noreferrer" href="https://www.gatsbyjs.org/"><img src="img/sponsors-img/Gatsby-Logo.svg" alt=""></a>
+                        </div>
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a target="_blank" rel="noopener noreferrer" href="https://www.elastic.co/"><img src="img/sponsors-img/logo-elastic.svg" alt=""></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" style="margin-left: 12%" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://balsamiq.com/"><img style="max-width: 50%;height: auto;" src="img/sponsors-img/balsamiq-logo-screen.png" alt=""></a>
