--- a/index.html
+++ b/index.html
@@ -508,6 +508,9 @@
                             <a target="_blank" rel="noopener noreferrer" href="https://www.codechef.com/"><img src="img/sponsors-img/codechef.png" alt=""></a>
                         </div> 
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a target="_blank" rel="noopener noreferrer" href="https://zulipchat.com/"><img style="width: auto;" src="img/sponsors-img/zulip.png" alt=""></a>
+                        </div> 
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://www.creative-tim.com/"><img src="img/sponsors-img/tim-horizontal-logo-transparent-bg.png" alt=""></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
@@ -528,8 +531,8 @@
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://www.elastic.co/"><img src="img/sponsors-img/logo-elastic.svg" alt=""></a>
                         </div>
-                        <div class="single-sponsor wow fadeInUp" style="margin-left: 12%" data-wow-delay="300ms">
-                            <a target="_blank" rel="noopener noreferrer" href="https://balsamiq.com/"><img style="max-width: 50%;height: auto;" src="img/sponsors-img/balsamiq-logo-screen.png" alt=""></a>
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a target="_blank" rel="noopener noreferrer" href="https://balsamiq.com/"><img src="img/sponsors-img/balsamiq-logo-screen.png" alt=""></a>
                         </div>
                     </div>
                     <div id="desktop">
