--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                                 <li><a href="#">Links</a>
                                     <ul class="dropdown">
                                         <li><a target="_blank" rel="noopener noreferrer" href="http://dj.nitk.ac.in/">NITK  💎 Jubilee</a></li>
-                                        <li><a target="_blank" rel="noopener noreferrer" href="http://www.nitk.ac.in/">NITK </a></li>
+                                        <li><a target="_blank" rel="noopener noreferrer" href="http://www.nitk.ac.in/">NITK, Surathkal</a></li>
                                         <!-- <li><a target="_blank" rel="noopener noreferrer" href="http://ie.nitk.ac.in/">IE NITK</a></li> -->
                                         <!-- <li><a target="_blank" rel="noopener noreferrer" href="#">Our Team </a></li>                                         -->
 
@@ -845,8 +845,8 @@
                     <div class="col-12 col-md-6">
                         <div class="copywrite-text">
                             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://hackverse.nitk.ac.in" target="_blank">HackVerse Team</a> &amp; <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://hackverse.nitk.ac.in" target="_blank">HackVerse Team</a> &amp; <a href="https://colorlib.com" target="_blank">Colorlib</a>
+</p>
                         </div>
                     </div>
                     <!-- Footer Menu -->
