updated why attend area

--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                                 <!-- <li><a href="">Prizes</a></li> -->
                                 <li><a href="#">Links</a>
                                     <ul class="dropdown">
-                                        <li><a target="_blank" rel="noopener noreferrer" href="http://dj.nitk.ac.in/">NITK  💎 Jubilee</a></li>
-                                        <li><a target="_blank" rel="noopener noreferrer" href="http://www.nitk.ac.in/">NITK, Surathkal</a></li>
+                                        <li><a target="_blank" rel="noopener noreferrer" href="//dj.nitk.ac.in/">NITK  💎 Jubilee</a></li>
+                                        <li><a target="_blank" rel="noopener noreferrer" href="//www.nitk.ac.in/">NITK, Surathkal</a></li>
                                         <!-- <li><a target="_blank" rel="noopener noreferrer" href="http://ie.nitk.ac.in/">IE NITK</a></li> -->
                                         <!-- <li><a target="_blank" rel="noopener noreferrer" href="#">Our Team </a></li>                                         -->
 
@@ -136,9 +136,6 @@
                             <div id="logo-mob">
                                 <img  src="img/emblem.png" style="max-width: 25%;display:block;margin:auto;padding-top: 55%;cursor: pointer;">     
                             </div>
-
-                            <!-- Get Tickets Button -->
-
                             <!-- <a href="#" class="btn confer-btn mt-3 mt-lg-0 ml-3 ml-lg-5">Register! <i class="zmdi zmdi-long-arrow-right"></i></a> -->
                         </div>
                         <!-- Nav End -->
@@ -234,10 +231,75 @@
                 <!-- About Thumb -->
                 <div class="col-6 col-md-6 order-1 order-lg-2">
                     <div class="about-thumb mb-80 wow fadeInUp" data-wow-delay="300ms">
-                        <img src="img/LOGO.png" alt="">
+                        <img src="img/LOGO.png" alt="HackVerse Logo">
                     </div>
                 </div>
             </div>
+
+            <!-- <div class="row align-items-center">
+                
+                <div class="col-12 col-md-12">
+                    <div class="about-content-text mb-80">
+                        <h3 class="wow fadeInUp" data-wow-delay="300ms">Why Attend?</h3>
+                    </div>
+                </div>
+
+                <div class="col-6 col-md-3 col-lg-3">
+                    <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
+                        <div class="single-blog-thumb">
+                            <img src="img/why-attend/learn-build.png" alt="Learn & Build">
+                        </div>
+                        <div class="single-blog-text text-center">
+                            <h4>Learn & Build</h4>
+
+                            <p>To Learn & Build</p>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="col-6 col-md-3 col-lg-3">
+                    <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
+                        <div class="single-blog-thumb">
+                            <img src="img/bg-img/18.jpg" alt="">
+                        </div>
+                        <div class="single-blog-text text-center">
+                            <h4>Workshops & Talks</h4>
+
+                            <p>To get free meals</p>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="col-6 col-md-3 col-lg-3">
+                    <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
+                        <div class="single-blog-thumb">
+                            <img src="img/bg-img/18.jpg" alt="">
+                        </div>
+                        <div class="single-blog-text text-center">
+                            <h4>Network & Network</h4>
+
+                            <p>To Network</p>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="col-6 col-md-3 col-lg-3">
+                    <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
+                        <div class="single-blog-thumb">
+                            <img src="img/why-attend/prizes.png" alt="Swags & Prizes">
+                        </div>
+                        <div class="single-blog-text text-center">
+                            <h4>Schwags & Prizes</h4>
+
+                            <p>To win prizes</p>
+                        </div>
+
+                    </div>
+                </div>
+            </div> -->
 
             <div class="row align-items-center">
                     <!-- About Content -->
