why attend section added

--- a/index.html
+++ b/index.html
@@ -236,11 +236,11 @@
                 </div>
             </div>
 
-            <!-- <div class="row align-items-center">
+            <div class="row align-items-center">
                 
                 <div class="col-12 col-md-12">
                     <div class="about-content-text mb-80">
-                        <h3 class="wow fadeInUp" data-wow-delay="300ms">Why Attend?</h3>
+                        <h3 class="wow fadeInUp" data-wow-delay="300ms">Why Attend HackVerse?</h3>
                     </div>
                 </div>
 
@@ -250,9 +250,8 @@
                             <img src="img/why-attend/learn-build.png" alt="Learn & Build">
                         </div>
                         <div class="single-blog-text text-center">
-                            <h4>Learn & Build</h4>
+                            <h4>Learn &amp; Build</h4>
 
-                            <p>To Learn & Build</p>
                         </div>
 
                     </div>
@@ -261,12 +260,11 @@
                 <div class="col-6 col-md-3 col-lg-3">
                     <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
                         <div class="single-blog-thumb">
-                            <img src="img/bg-img/18.jpg" alt="">
+                            <img src="img/why-attend/talks.png" alt="Workshops & Talks">
                         </div>
                         <div class="single-blog-text text-center">
-                            <h4>Workshops & Talks</h4>
+                            <h4>Workshops &amp; Talks</h4>
 
-                            <p>To get free meals</p>
                         </div>
 
                     </div>
@@ -275,12 +273,11 @@
                 <div class="col-6 col-md-3 col-lg-3">
                     <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
                         <div class="single-blog-thumb">
-                            <img src="img/bg-img/18.jpg" alt="">
+                            <img src="img/why-attend/networking.png" alt="Networking">
                         </div>
                         <div class="single-blog-text text-center">
-                            <h4>Network & Network</h4>
+                            <h4>Network &amp; Network</h4>
 
-                            <p>To Network</p>
                         </div>
 
                     </div>
@@ -292,14 +289,13 @@
                             <img src="img/why-attend/prizes.png" alt="Swags & Prizes">
                         </div>
                         <div class="single-blog-text text-center">
-                            <h4>Schwags & Prizes</h4>
+                            <h4>Schwags &amp; Prizes</h4>
 
-                            <p>To win prizes</p>
                         </div>
 
                     </div>
                 </div>
-            </div> -->
+            </div>
 
             <div class="row align-items-center">
                     <!-- About Content -->
